--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -8,9 +8,9 @@
     </div>
 
     <!-- Login Form -->
-    <form>
-      <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-      <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+    <form [formGroup]= "loginForm" (ngSubmit)="onLogin(loginForm.value)">
+      <input type="text" id="login" class="fadeIn second" placeholder="login" formControlName="user">
+      <input type="password" id="password" class="fadeIn third" placeholder="password" formControlName="password">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
