Adding LoginByEMail function in api.service to make post call for login in the app using httpClient and interfaces created(LoginI and ResponseI)

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -9,7 +9,7 @@
 
     <!-- Login Form -->
     <form [formGroup]= "loginForm" (ngSubmit)="onLogin(loginForm.value)">
-      <input type="text" id="login" class="fadeIn second" placeholder="login" formControlName="user">
+      <input type="text" id="login" class="fadeIn second" placeholder="login" formControlName="usuario">
       <input type="password" id="password" class="fadeIn third" placeholder="password" formControlName="password">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
