--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -251,3 +251,9 @@ input[type=password]:placeholder {
 #icon {
   width:60%;
 }
+
+.login-cheat-params {
+  display: flex; 
+  flex-direction: row; 
+  justify-content: center;
+}
