--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,3 +1,12 @@
+<div>
+  <p class="login-cheat-params">
+    <span style="font-weight: bold">User:</span>
+    usuario1@gmail.com
+    <span style="font-weight: bold"> &nbsp; Password:</span>
+    123456
+  </p>
+</div>
+
 <div class="wrapper fadeInDown">
   <div id="formContent">
     <!-- Tabs Titles -->
@@ -9,14 +18,14 @@
 
     <!-- Login Form -->
     <form [formGroup]= "loginForm" (ngSubmit)="onLogin(loginForm.value)">
-      <input type="text" id="login" class="fadeIn second" placeholder="login" formControlName="usuario">
+      <input type="text" id="login" class="fadeIn second" placeholder="User" formControlName="usuario">
       <input type="password" id="password" class="fadeIn third" placeholder="password" formControlName="password">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
 
     <!-- Remind Passowrd -->
-    <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
+    <div class="alert alert-danger" *ngIf="errorStatus">
+      <span>{{errorMessage}}</span>
     </div>
 
   </div>
