Create Footer and Header(Navbar)

--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,1 +1,5 @@
-<p>header works!</p>
+<nav class="navbar navbar-dark bg-dark">
+    <span class="navbar-text">
+        Consumir Api
+    </span>
+</nav>
