Footer/Header modifications, Create patients interface, Creste new button and starting to add logic to Edit functionallity

--- a/src/app/templates/footer/footer.component.css
+++ b/src/app/templates/footer/footer.component.css
@@ -1,6 +1,9 @@
 footer {
     position: fixed;
-    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
     bottom: 0;
     width: 100%;
     background-color: black;
