Adding new patients in CRUD

--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -2,5 +2,8 @@
     <span class="navbar-text">
         Consumir Api
     </span>
+    <button class="btn btn-danger" (click)="onLogOut()">
+        LogOut
+    </button>
 </nav>
 <br><br>
