--- a/src/app/views/edit/edit.component.html
+++ b/src/app/views/edit/edit.component.html
@@ -34,6 +34,7 @@
         <br>
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-danger" (click)="delete()">Delete</button>
+        <button type="button" class="btn btn-dark" (click)="goBack()">GoBack</button>
     </form>
 </div><br><br>
 <app-footer></app-footer>
