--- a/src/app/views/new/new.component.html
+++ b/src/app/views/new/new.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <br>
+<div class="container">
     <form [formGroup]="newForm" (ngSubmit)="postForm(newForm.value)">
         <div class="form-group row">
             <label for="NameInput">Name</label>
@@ -34,4 +35,5 @@
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-dark" (click)="goBack()">GoBack</button>
     </form>
+</div>
 <app-footer></app-footer>
